build with token